--- a/web/exec-bubble.css
+++ b/web/exec-bubble.css
@@ -15,7 +15,7 @@
 }
 
 #exec-bubble {
-  position: fixed; z-index: 9000;
+  position: fixed; z-index: 10000;
   width: 50px; height: 50px; border-radius: 50%;
   background: hsl(var(--pink-hsl) / 0.12);
   outline: 1px solid hsl(var(--pink-hsl) / 0.8);
